[package]
name = "customizing_builds_with_release_profiles"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# More about profiles:  https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
