# Package name needs to be unique on crates.io in order to be published
[package]
name = "publishing_crate_cratesio"
version = "0.1.0"
edition = "2018"
description = "Sample crate for publishing to crates.io"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
